--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,16 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // Set the properties within `local.properties` into a `Properties` class so that values
+        // within `local.properties` (e.g. Maps API key) are accessible in this file.
+        Properties properties = new Properties()
+        if (rootProject.file("local.properties").exists()) {
+            properties.load(rootProject.file("local.properties").newDataInputStream())
+        }
+
+        // Inject the Yelp API key into the manifest
+        manifestPlaceholders = [ yelpApiKey : properties.getProperty("YELP_API_KEY", "") ]
     }
 
     buildTypes {
